# rest-framwork

./: README.md  pyproject.toml
drive/: Dockerfile  db.sqlite3  docker-compose.yml  requirements.txt
drive/cars/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
drive/cars/migrations/: 0001_initial.py  0002_rename_cars_car.py  0003_alter_car_updated.py
drive/drive/: asgi.py  settings.py  urls.py  wsgi.py
